objects/Lead_Disposition__e.object
<CustomObject>
    <fields>
        <fullName>ArrivalTime_DT__c</fullName>
        <description>Oppty createddate</description>
        <label>Arrival Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AutoResponse_FLG__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auto Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrentStatus_NM__c</fullName>
        <description>based on the Oppty status, map the following values (numeric portion only:

2 - In Process, use this if the oppty stage type = Open (as opposed to Closed/won or Closed/lost)
3 - Sold (if oppty stage type = Closed/won
4 - Inactive (if oppty stage type = Closed/Lost</description>
        <label>Current Status</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Id_TXT__c</fullName>
        <description>This should be the Oppty.Lead External ID field that we originally populated from the LDRA ID during lead creation from ADF. this field should have been mapped from Lead.External ID to the Oppty.Lead External ID during the lead conversion.</description>
        <label>Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastEvent_NM__c</fullName>
        <description>We will need a mapping from the Oppty stage/status combination to on of the following values.  Note that only the numeric portion of the below list is to be populated in the event:
1 - Sale (if oppty stage type changes to Closed/won)
2 - Meeting (oppty stage/status  change: tbd)
3 - Letter (oppty stage/status  change: tbd)</description>
        <label>Last Event</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ResponseTime_DT__c</fullName>
        <description>Date/time (last modified date) of the Oppty based on the status/stage changes as mentioned in the Last Event.</description>
        <label>Response Time</label>
        <type>DateTime</type>
    </fields>
    <label>Lead Disposition</label>
    <pluralLabel>Lead Dispositions</pluralLabel>
</CustomObject>